# KutInf

./: CMakeLists.txt  Main.cpp  Vector.hpp
Kutinf_projekt/: CMakeLists.txt
Kutinf_projekt/doc/: abeld.bst  document.tex
tests/: test1_add.cpp
